--- a/CSS/main.css
+++ b/CSS/main.css
@@ -4,6 +4,22 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: hsl(208deg, 11%, 55%);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(192deg, 100%, 9%);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(322deg, 100%, 66%);
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
@@ -131,11 +147,11 @@ main {
   padding: 5rem 3rem 3rem;
   text-align: center;
   position: absolute;
-  top: -200px;
+  top: -230px;
   background-color: #fff;
   left: 20%;
   z-index: 10;
-  border-radius: 15px;
+  border-radius: 25px;
 }
 .absolute h3 {
   font-size: 1.8rem;
@@ -155,6 +171,9 @@ main {
   justify-content: center;
   margin: 1rem auto 2rem;
   align-items: center;
+}
+.absolute a:hover {
+  opacity: 0.7;
 }
 
 footer {
@@ -230,4 +249,101 @@ footer .flex-container {
 #copy {
   text-align: right;
   font-size: 10px;
+}
+
+@media screen and (max-width: 820px) {
+  header {
+    background-image: url("/images/bg-hero-mobile.svg");
+  }
+  header .header {
+    padding: 2rem 1rem;
+  }
+  .logo img {
+    width: 100px;
+  }
+  nav a {
+    width: 100px;
+    height: 20px;
+    font-size: 11px;
+  }
+  div.img-txt {
+    flex-direction: column;
+    padding: 1rem;
+    text-align: center;
+  }
+  div.img-txt .head-txt {
+    padding: 0 0 0 0;
+  }
+  div.img-txt .head-txt h1 {
+    margin-right: 0;
+  }
+  div.img-txt .head-txt p {
+    margin-right: 0;
+    margin-bottom: 2rem;
+  }
+  div.img-txt .head-txt a {
+    margin: auto;
+    font-size: 13px;
+    margin: 1.5rem auto 2rem;
+  }
+  div.img-txt .head-img img {
+    width: 70vw;
+  }
+  .section {
+    flex-direction: column-reverse;
+    margin: 7rem 1rem;
+    padding: 3rem 1rem 2rem;
+    text-align: center;
+  }
+  .section .sec-left p {
+    margin-right: 0;
+  }
+  .section .sec-right img {
+    width: 55vw;
+    display: block;
+    margin-bottom: 1rem;
+  }
+  .section-two {
+    flex-direction: column;
+  }
+  .section-two .sec-two-right h2 {
+    margin-left: 0;
+  }
+  .section-two .sec-two-right p {
+    margin-left: 0;
+  }
+  .absolute {
+    width: 90%;
+    left: 5%;
+    top: -130px;
+    min-width: 300px;
+    padding: 3rem 1rem 2rem;
+  }
+  .absolute h3 {
+    font-size: 1.2rem;
+  }
+  .absolute a {
+    width: 150px;
+    height: 40px;
+    font-size: 12px;
+    margin: 1rem auto;
+  }
+  footer {
+    padding: 8rem 1rem 2rem;
+  }
+  footer .flex-container {
+    flex-direction: column;
+    padding: 0;
+  }
+  .address {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+  .links {
+    padding: 0;
+  }
+  .social {
+    justify-content: center;
+    margin: 2rem 0;
+  }
 }/*# sourceMappingURL=main.css.map */
