--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -161,11 +161,11 @@ main {
   padding: 5rem 3rem 3rem;
   text-align: center;
   position: absolute;
-  top: -200px;
+  top: -230px;
   background-color: #fff;
   left: 20%;
   z-index: 10;
-  border-radius: 15px;
+  border-radius: 25px;
   h3 {
     font-size: 1.8rem;
     margin-bottom: 2.3rem;
@@ -185,6 +185,10 @@ main {
     justify-content: center;
     margin:  1rem auto 2rem;
     align-items: center;
+
+    &:hover {
+        opacity: 0.7;
+      }
   }
 }
 
@@ -284,3 +288,8 @@ footer {
   text-align: right;
   font-size: 10px;
 }
+
+
+
+
+@import "mediaq";
