--- a/CSS/_mediaq.scss
+++ b/CSS/_mediaq.scss
@@ -91,7 +91,7 @@
           min-width: 300px;
           padding:  3rem 1rem 2rem;
          h3{
-            font-size: 1.2rem;
+            font-size: 1rem;
          }
 
          a{
@@ -130,8 +130,9 @@ footer{
 
 
 
-
-
+#copy{
+    text-align: center;
+}
 
 
 
