fixed font size

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -253,6 +253,9 @@ footer .flex-container {
 }
 
 @media screen and (max-width: 820px) {
+  body {
+    font-size: 12px;
+  }
   header {
     background-image: url("/images/bg-hero-mobile.svg");
   }
