--- a/CSS/_mediaq.scss
+++ b/CSS/_mediaq.scss
@@ -1,5 +1,9 @@
 @media screen and (max-width: 820px) {
 
+    body {
+        font-size: 12px;
+    }
+
     header {
         background-image: url("/images/bg-hero-mobile.svg");
       
