--- a/CSS/main.css
+++ b/CSS/main.css
@@ -210,6 +210,7 @@ footer .flex-container {
 .address p img {
   width: 10px;
   display: inline-block;
+  transform: translateY(5px);
 }
 
 .links {
@@ -236,8 +237,8 @@ footer .flex-container {
   border-radius: 50%;
   border: 1px solid hsl(193deg, 100%, 96%);
   display: flex;
-  width: 25px;
-  height: 25px;
+  width: 27px;
+  height: 27px;
   justify-content: center;
   align-items: center;
 }
