--- a/CSS/main.css
+++ b/CSS/main.css
@@ -56,6 +56,7 @@ nav a {
   text-decoration: none;
   box-shadow: 0 0 10px -5px hsl(192deg, 100%, 9%);
   transition: 0.6s;
+  font-weight: 700;
 }
 nav a:hover {
   background-color: hsl(193deg, 100%, 96%);
@@ -95,6 +96,7 @@ div.img-txt .head-txt a {
   align-items: center;
   margin: 1.5rem 0 0;
   transition: 0.6s;
+  font-weight: 700;
 }
 div.img-txt .head-txt a:hover {
   opacity: 0.7;
@@ -172,6 +174,8 @@ main {
   justify-content: center;
   margin: 1rem auto 2rem;
   align-items: center;
+  font-weight: 700;
+  transition: 0.6s;
 }
 .absolute a:hover {
   opacity: 0.7;
