--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -42,6 +42,7 @@ nav {
     text-decoration: none;
     box-shadow: 0 0 10px -5px $Very-Dark-Cyan;
     transition: 0.6s;
+    font-weight: 700;
     &:hover {
       background-color: $Very-Pale-Cyan;
     }
@@ -83,6 +84,7 @@ div.img-txt {
       align-items: center;
       margin: 1.5rem 0 0;
       transition: 0.6s;
+      font-weight: 700;
 
       &:hover {
         opacity: 0.7;
@@ -186,6 +188,8 @@ main {
     justify-content: center;
     margin:  1rem auto 2rem;
     align-items: center;
+    font-weight: 700;
+    transition: 0.6s;
 
     &:hover {
         opacity: 0.7;
